infrastructure/analytics-pool/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: analytics
  labels:
    name: analytics
    app: defimon-analytics
    pool: analytics
